--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=5263cdf8d41c6f24b9c6061e5c478df5
 ###< symfony/framework-bundle ###
 
