--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,8 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-/public/uploads/**/*.mp4
-/public/uploads/**/*.jpg
-/public/uploads/**/*.png
-/public/uploads/**/*.webp
-/public/uploads/*.vtt
-/public/uploads/*.jpg
+/public/uploads/**/
+
 
 ###> phpunit/phpunit ###
 /phpunit.xml
